# llm-from-scratch

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_understanding-large-language-models.md  02_working-with-text-data.ipynb  03_coding_attention_mechanisms.ipynb  04_implementing_a_gpt_model_from_scratch.ipynb  05_pretraining_on_unlabeled_data.ipynb  06_fine_tuning_for_classification.ipynb  07_fine_tuning_to_follow_instructions.ipynb
