[project]
name = "llm-from-scratch"
version = "0.0.0"
description = "Building a GPT-style LLM from scratch. Based on the book by Sebastian Raschka (2025)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy==1.26.4",
    "pip>=25.0.1",
    "tiktoken>=0.9.0",
    "torch==2.2.2",
]
